fix css spacing for game stats and turn/time

--- a/equations/static/css/game.css
+++ b/equations/static/css/game.css
@@ -152,7 +152,7 @@
 
 .stats.the-stats-inner {
     height: 88%;
-    width: 90%;
+    width: 99%;
 
     position: absolute;
     left: 50%;
@@ -171,18 +171,49 @@
     font-family: monospace;
     color: white;
     font-size: 1vw;
-    transform: translateY(-75%);
+    transform: translate(5%, -40%);
+
+    display: flex;
+    flex-direction: row;
+    align-items: stretch;
 }
+
+.time-elapsed #text {
+    /* border: dotted;
+    border-color: white; */
+    width: 45%;
+}
+
+/* .time-elapsed #elapsed {
+    /* border: dotted;
+    border-color: white;
+} */
 
 .scores table {
     height: 85%;
-    width: 100%;
+    width: 95%;
 
     font-family: monospace;
     color: white;
     font-size: 0.8vw;
 
     overflow-y: scroll;
+
+    table-layout: fixed;
+    transform: translate(2.5%, -50%);
+
+    /* border: dotted;
+    border-color: white; */
+
+}
+
+.scores table th {
+    /* border: dotted;
+    border-color: white; */
+
+    text-align: center;
+    /* overflow-wrap: break-word; */
+    overflow-x: hidden;
 }
 
 .time {
@@ -190,7 +221,7 @@
     height: 20%;
     position: relative;
 
-    overflow: scroll;
+    /* overflow: scroll; */
 }
 
 .time.inner {
@@ -217,12 +248,51 @@
 
 .time-inner-first {
     height: 50%;
-    width: 100%;
+    width: 97%;
+
+    display: flex;
+    flex-direction: row;
+    align-items: stretch;
+
+    /* border: dotted;
+    border-color: white; */
+}
+
+.time-inner-first #text {
+    /* border: dotted;
+    border-color: white; */
+    width: 37%;
+}
+
+.time-inner-first #turn {
+    /* border: dotted;
+    border-color: white; */
+    width: 63%;
+    overflow: hidden;
+}
+
+.time-inner-first #turn p {
+    /* TODO https://stackoverflow.com/questions/16056591/font-scaling-based-on-width-of-container */
+    font-size: 1.2vw;
+    transform: translate(5%, -30%);
 }
 
 .time-inner-second {
     height: 50%;
-    width: 100%;
+    width: 97%;
+
+    display: flex;
+    flex-direction: row;
+    align-items: stretch;
+}
+
+.time-inner-second #text {
+    width: 37%;
+}
+
+.time-inner-second #time {
+    width: 63%;
+    overflow: hidden;
 }
 
 .buttons {
